# yt-classifier

./: .env.example  .gitignore  README.md  data_info.py  data_link.py  pyproject.toml
data/: search_query.csv  video_category.csv
notebooks/: knn.ipynb  resnet50.ipynb  resnet50_improved.ipynb  svm.ipynb  vision_transformer.ipynb
