[tool.poetry]
name = "yt-classifier"
version = "0.1.0"
description = ""
authors = ["Sungwoo Park <codest99@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
